# unit_testing_Cpp_exercises

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: check-links.yml  ci.yml  pre-commit_autoupdate.yml
cmake/: UnitTestingCourseCommon.cmake
src/Chapter1/: CMakeLists.txt  program.cpp
src/Chapter2/: CMakeLists.txt  fibonacci.cpp  fibonacci.hpp  program.cpp  test.cpp
src/Chapter2/Exercise_solutions/: CMakeLists.txt  exercise_solution.cpp  fibonacci.cpp
src/Chapter3/: 1_employeetest.cpp  2_employeetest.cpp  3_emp_table_test.cpp  4_table_test_with_setup.cpp  CMakeLists.txt  employee.cpp  employee.h  employee_table.cpp  employee_table.h
src/Chapter3/Exercise_solutions/: CMakeLists.txt  a_test_display_function.cpp  employee.h  employee_table.h
src/Chapter4/: 1_not_parameterised.cpp  2_test_using_for_loop.cpp  3_parameterised_not_using_fixture.cpp  4_param_test_based_fixture.cpp  CMakeLists.txt  employee.cpp  employee.h
src/Chapter4/Exercise_solutions/: CMakeLists.txt  a_param_test_normal_function.cpp  b_multiple_test_p_instant.cpp
src/Chapter5/: CMakeLists.txt  employee_table.h  exercise_with_mocks.cpp  test_dependency_injection.cpp  test_mock_and_spy_template.cpp  test_mock_and_spy_virtual.cpp
